--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "axios": "^0.19.0",
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
+    "apollo-boost": "^0.4.4",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-ws": "^1.0.19",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "https-proxy-agent": "^3.0.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.1.1",
     "react": "^16.10.2",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-text-mask": "^5.4.3",
+    "subscriptions-transport-ws": "^0.9.16",
     "webpack": "^4.41.2"
   },
   "devDependencies": {},
