--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "^3.2.0",
     "react-text-mask": "^5.4.3",
     "subscriptions-transport-ws": "^0.9.16",
-    "webpack": "^4.41.2"
+    "webpack": "^4.41.2",
+    "ws": "^7.2.0"
   },
   "devDependencies": {},
   "scripts": {
