--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql-tag": "^2.10.1",
     "https-proxy-agent": "^3.0.1",
     "isomorphic-unfetch": "^3.0.0",
+    "js-cookie": "^2.2.1",
     "next": "^9.1.1",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
