--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "https-proxy-agent": "^3.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "^9.1.1",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
