--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-ws": "^1.0.19",
+    "google-map-react": "^1.1.5",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "https-proxy-agent": "^3.0.1",
@@ -18,6 +19,7 @@
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.2",
+    "react-load-script": "0.0.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-text-mask": "^5.4.3",
