--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
     "apollo-link-ws": "^1.0.19",
+    "classnames": "^2.2.6",
     "google-map-react": "^1.1.5",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
