--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "^9.1.1",
+    "points-cluster": "^0.1.4",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.10.2",
