--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   }
 }
