--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
     "react-text-mask": "^5.4.3",
     "subscriptions-transport-ws": "^0.9.16",
     "webpack": "^4.41.5"
