--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^3.3.0",
     "react-select": "^3.0.8",
     "react-text-mask": "^5.4.3",
+    "react-textarea-autosize": "^7.1.2",
     "subscriptions-transport-ws": "^0.9.16",
     "webpack": "^4.41.5"
   },
