--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-link-context": "^1.0.19",
     "apollo-link-ws": "^1.0.19",
     "classnames": "^2.2.6",
+    "debug": "^4.1.1",
     "google-map-react": "^1.1.5",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -33,8 +34,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "next start"
   }
 }
